correction mobile menu RWD

--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,9 +6,9 @@
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transform: translateX(100%);
-    transition: transform $cubic-bezier, opacity $cubic-bezier,
-        visibility $cubic-bezier;
+    transform: translatey(-100%);
+    transition: transform 250ms $cubic-bezier, opacity 250ms $cubic-bezier,
+        visibility 250ms $cubic-bezier;
     background-color: #fff;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .m-menu-btn__icon {
-    transition: fill $cubic-bezier;
+    transition: fill 250ms $cubic-bezier;
 }
 
 .m-menu-btn__icon:hover,
@@ -28,7 +28,7 @@
 }
 
 .m-menu__overlay.is-open {
-    transform: translateX(0);
+    transform: translateY(0);
     opacity: 1;
     pointer-events: initial;
     visibility: visible;
@@ -60,7 +60,7 @@
     right: 25px;
     top: 21px;
     cursor: pointer;
-    transition: fill $cubic-bezier;
+    transition: fill 250ms $cubic-bezier;
 
     &:hover,
     &:focus {
